font-sizes maintained based on screen sizes for inner-map section

--- a/src/scss/base/button.scss
+++ b/src/scss/base/button.scss
@@ -32,6 +32,9 @@ button.openspace-button,a.openspace-button {
         border:1px solid $color-blue;
     }
 }
+a.openspace-button {
+    font-size: .75rem;
+}
 .action-btn{
     width:100%;
     .sm-button:last-child{
