--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -1345,6 +1345,11 @@
     .openSpace-map {
         .map-wrapper {
             .map-sidebar {
+                .report-count{
+                    h5 {
+                        font-size: 1.325rem;
+                    }
+                }
                 .overview-item {
                     h6 {
                         font-size: 1rem;
