space section aligned in same height

--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -514,3 +514,20 @@
     }
 }
 }
+
+@media screen and (max-width: $lg-tab)
+{
+    .site-header {
+        .headerWrap {
+            .headRight{
+                ul{
+                    li{
+                       a {
+                            padding: .525rem 1rem;
+                        }
+                    } 
+                }
+            }
+        }
+    } 
+}
