text-overflow removed and view more button has been added in gallery section

--- a/src/scss/partials/mixin.scss
+++ b/src/scss/partials/mixin.scss
@@ -473,6 +473,16 @@ $breakpoints: (
   backface-visibility: $backface;
 }
 
+@mixin text-overflow($value){
+    
+  display: -webkit-flex;
+  display: flex;
+    display: -webkit-box;
+    -webkit-line-clamp: $value;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
 @mixin border($width, $style, $color){
   border-width: $width;
   border-style: $style;
