gallery-btn placed at end

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -1196,7 +1196,7 @@
                     .gallery-btn{
                         padding-top: 30px;
                         @include flex;
-                        justify-content: center;
+                        justify-content: flex-end;
                         button{
                             @include button($color-white, $color-blue);
                             border: none;
