leaflet section is separated

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -212,7 +212,7 @@
 
                         ul {
                             background-color: $color-white;
-
+                            margin-bottom: 20px;
                             h6 {
                                 background: transparent;
                                 color: $color-primary;
