hover heading-title in report section

--- a/src/scss/pages/map.scss
+++ b/src/scss/pages/map.scss
@@ -815,7 +815,9 @@
                             p {
                                 margin: 0;
                                 align-items: center;
-
+                                &:hover{
+                                    cursor: pointer;
+                                }
                                 a {
                                     color: $color-blue;
                                     font-weight: 700;
